--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,19 @@ spring:
    config:
       active:
         on-profile: local
+   datasource:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/land_moa?serverTimezone=UTC&characterEncoding=UTF-8
+      username: "app_user"
+      password: "@ppuser1234"
+   jpa:
+      properties:
+         hibernate:
+            dialect: org.hibernate.dialect.MySQL8Dialect
+      hibernate:
+         naming:
+            physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        
+data-go:
+   apartment:
+      newly-transaction-key: Wrv5NTBYzW8eWKNFmeewJ84DVoJXQ98%2Fxc5XA0jtgvfXFZykxUDvfnIjvLUQnk3Mpq%2Frizvyj8I%2B3Pfve4BIqA%3D%3D
