로그인 정보 insert timestamp 기본값 처리 및 hibernate 환경설정 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,34 @@
 logging:
    level:
       root: info
+      org:
+         hibernate:
+            type:
+               descriptor:
+                  sql: trace
 
 server:
    port: 8000
+
+spring:
+   profiles:
+      active: dev
 ---
 spring:
    config:
-      active:
-        on-profile: local
+      activate:
+        on-profile: dev
    datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/land_moa?serverTimezone=UTC&characterEncoding=UTF-8
       username: "app_user"
       password: "@ppuser1234"
    jpa:
+      show-sql: true
       properties:
          hibernate:
             dialect: org.hibernate.dialect.MySQL8Dialect
+            format-sql: true
       hibernate:
          naming:
             physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
