디비 호스트 변경 로그인 서비스 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
         on-profile: dev
    datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/land_moa?serverTimezone=UTC&characterEncoding=UTF-8
+      url: jdbc:mysql://jinbro.iptime.org:3306/land_moa?serverTimezone=UTC&characterEncoding=UTF-8
       username: "app_user"
       password: "@ppuser1234"
    jpa:
